# FontLoaderSubRe

./: .gitignore  Makefile  README.md  build.py  cli_indexer.py  go.mod  go.sum  main.py  pyproject.toml  utils.py
cmd/cli_indexer/: main.go
cmd/fontloader/: FyneApp.toml  main.go
fontloader-go/: FyneApp.toml  Makefile  README_go.md  go.mod
fontloader-go/cmd/cli_indexer/: main.go
fontloader-go/cmd/fontloader/: FyneApp.toml  main.go
fontloader-go/internal/config/: config.go
fontloader-go/internal/db/: db.go
fontloader-go/internal/fontmeta/: extractor.go
fontloader-go/internal/loader/: loader.go
fontloader-go/internal/mkv/: extractor.go
fontloader-go/internal/scanner/: scanner.go
fontloader-go/internal/session/: session.go
fontloader-go/internal/subtitle/: parser.go
fontloader-go/ui/: app.go  workers.go
internal/config/: config.go
internal/db/: db.go
internal/i18n/: strings.go
internal/loader/: loader_unix.go  loader_windows.go
internal/scanner/: scanner.go
internal/session/: session.go
python/: cli_indexer.py  main.py
resources/: icon.icns
ui/: app.go  workers.go
