[project]
name = "FontLoaderSubRe"
version = "0.1.1"
description = "Multi-platform FontLoaderSub Rewritten in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.61.0",
    "platformdirs>=4.5.1",
    "tkinterdnd2>=0.4.3",
]

[tool.ruff]
line-length = 88
select = ["ALL"]
fix = true

[tool.ruff.lint]
ignore=["D401"]

[dependency-groups]
dev = [
    "imageio>=2.37.2",
    "nuitka>=2.8.9",
]
